--- a/subprojects/docs/src/docs/userguide/core-plugins/base_plugin.adoc
+++ b/subprojects/docs/src/docs/userguide/core-plugins/base_plugin.adoc
@@ -12,6 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
+Blah blah blah, testing CODEOWNERS
+
 [[base_plugin]]
 = The Base Plugin
 
